# BattleCity

./: .gitignore  AddIconToBinary.cmake  BattleCity.sln  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile_github  README.md
.github/workflows/: testing.yml  upload_release.yml
BattleCity/: BattleCity.vcxproj  Block.cpp  Block.h  Bonus.cpp  Bonus.h  Bullet.cpp  Bullet.h  Config.h  Enemy.cpp  Enemy.h  Explosion.cpp  Explosion.h  Main.cpp  Player.cpp  Player.h  Stages.cpp  Tank.cpp  Tank.h  resource.h
resources/: Icon.icns
resources/stages/: blank.layout  stage0.layout  stage0.tanks  stage1.layout  stage1.tanks  stage10.layout  stage10.tanks  stage11.layout  stage11.tanks  stage12.layout  stage12.tanks  stage13.layout  stage13.tanks  stage14.layout  stage14.tanks  stage15.layout  stage15.tanks  stage2.layout  stage2.tanks  stage3.layout  stage3.tanks  stage4.layout  stage4.tanks  stage5.layout  stage5.tanks  stage6.layout  stage6.tanks  stage7.layout  stage7.tanks  stage8.layout  stage8.tanks  stage9.layout  stage9.tanks
src/: Client.cpp  Game.h  IObject.cpp  IObject.h  Log.cpp  Log.h  Path.cpp  Path.h  Server.cpp  Window.cpp  Window.h  client.cpp
src/Game/: Enums.h  Event.h  Game.cpp  Game.h  GameField.cpp  GameField.h  IObject.cpp  IObject.h
src/Game/Network/: ClientNetwork.cpp  ClientNetwork.h  Serializer.cpp  Serializer.h  ServerNetwork.cpp  ServerNetwork.h
src/Game/Objects/: Block.cpp  Block.h  Border.cpp  Border.h  Brick.cpp  Brick.h  Bullet.cpp  Bullet.h  Bush.cpp  Bush.h  EnemyTank.cpp  EnemyTank.h  Explosion.cpp  Explosion.h  IBlock.cpp  IBlock.h  IMovable.cpp  IMovable.h  IObject.cpp  IObject.h  ITank.cpp  ITank.h  NetworkObject.cpp  NetworkObject.h  Objects.h  PlayerTank.cpp  PlayerTank.h  TankSpawner.cpp  TankSpawner.h  Wall.cpp  Wall.h
src/Game/Objects/Interface/: GameOver.cpp  GameOver.h  LeftTanks.cpp  LeftTanks.h  PlayerLives.cpp  PlayerLives.h  StageNumber.cpp  StageNumber.h
src/Game/Objects/Playfield/: Border.cpp  Border.h  Brick.cpp  Brick.h  Bush.h  Eagle.cpp  Eagle.h  EagleProtection.cpp  EagleProtection.h  IBlock.h  TankSpawner.cpp  TankSpawner.h  Wall.cpp  Wall.h  Water.cpp  Water.h
src/Game/Objects/Tank/: Bonus.cpp  Bonus.h  Bullet.cpp  Bullet.h  EnemyTank.cpp  EnemyTank.h  Explosion.cpp  Explosion.h  ITank.cpp  ITank.h  PlayerTank.cpp  PlayerTank.h  Protection.cpp  Protection.h  TankProtection.cpp  TankProtection.h
src/Game/Render/: Drawable.cpp  Drawable.h  Drawables.h  Window.cpp  Window.h
src/Game/Render/Drawables/: BlockDrawable.cpp  BlockDrawable.h  BorderDrawable.cpp  BorderDrawable.h  BrickDrawable.cpp  BrickDrawable.h  BulletDrawable.cpp  BulletDrawable.h  BushDrawable.cpp  BushDrawable.h  ExplosionDrawable.cpp  ExplosionDrawable.h  IDrawable.cpp  IDrawable.h  TankDrawable.cpp  TankDrawable.h  TankSpawnerDrawable.cpp  TankSpawnerDrawable.h  WallDrawable.cpp  WallDrawable.h
src/Game/Render/Drawables/Interface/: GameOverDrawable.cpp  GameOverDrawable.h  LeftTanksDrawable.cpp  LeftTanksDrawable.h  PlayerLivesDrawable.cpp  PlayerLivesDrawable.h  StageNumberDrawable.cpp  StageNumberDrawable.h
src/Game/Render/Drawables/Playfield/: BorderDrawable.cpp  BorderDrawable.h  BrickDrawable.cpp  BrickDrawable.h  BushDrawable.cpp  BushDrawable.h  EagleDrawable.cpp  EagleDrawable.h  EagleProtectionDrawable.cpp  EagleProtectionDrawable.h  TankSpawnerDrawable.cpp  TankSpawnerDrawable.h  WallDrawable.cpp  WallDrawable.h  WaterDrawable.cpp  WaterDrawable.h
src/Game/Render/Drawables/Tank/: BonusDrawable.cpp  BonusDrawable.h  BulletDrawable.cpp  BulletDrawable.h  ExplosionDrawable.cpp  ExplosionDrawable.h  ProtectionDrawable.cpp  ProtectionDrawable.h  TankDrawable.cpp  TankDrawable.h  TankProtectionDrawable.cpp  TankProtectionDrawable.h
src/Objects/: ITank.cpp  ITank.h
src/Other/: Log.cpp  Log.h  Path.h
src/Render/: Drawable.cpp  Drawable.h  Window.cpp  Window.h
